syntax = "proto3";
package auth; // 包名改为 auth

// 使用正确的 go_package 路径，指向生成代码的目录
option go_package = "proto_output/auth";

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string created_at = 5;
  string updated_at = 6;
  int32 status = 7;                     // 0:正常 1:禁用 2:风控限制
  bool is_seckill_allowed = 8;          // 是否有秒杀资格
}

// AuthService: 只负责认证相关操作
service AuthService {
  // 用户注册
  rpc Register(RegisterRequest) returns (RegisterResponse);
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);
}

// --- 请求/响应消息 ---

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}

message RegisterResponse {
  int32 code = 1;
  string message = 2;
  // 这里我们引用了从 user.proto 导入的 User 类型
  User user = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int32 code = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

